--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.app.demo</groupId>
-  <artifactId>webmvnn</artifactId>
-  <packaging>war</packaging>
+
+  <groupId>com.kmit</groupId>
+  <artifactId>my-java-app</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>webmvnn Maven Webapp</name>
+  <packaging>jar</packaging>
+
+  <name>my-java-app</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,16 +21,5 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
-	<dependency>
-	    <groupId>javax.servlet</groupId>
-	    <artifactId>servlet-api</artifactId>
-	    <version>2.5</version>
-	    <scope>provided</scope>
-	</dependency>
-
   </dependencies>
-  <build>
-    <finalName>webmvnn</finalName>
-  </build>
 </project>
